--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'KageCloud'
-include 'plugin', 'wrapper', 'bungee', 'core'
+include 'plugin', 'wrapper', 'bungee', 'velocity', 'core'
