--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ project(":velocity") {
 		implementation 'commons-io:commons-io:2.5'
 
 		implementation 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
+		annotationProcessor 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
     }
 
 	shadowJar {
