--- a/build.gradle
+++ b/build.gradle
@@ -56,12 +56,13 @@ project(":core") {
 
 project(":velocity") {
     dependencies {
+		annotationProcessor 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
+
 		implementation project(":core")
 
 		implementation 'commons-io:commons-io:2.5'
 
-		implementation 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
-		annotationProcessor 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
+		compileOnly 'com.velocitypowered:velocity-api:1.0.0-SNAPSHOT'
     }
 
 	shadowJar {
